Semi-working commit
need to test installer

--- a/src/frontend/templates/index.html
+++ b/src/frontend/templates/index.html
@@ -19,7 +19,7 @@
       </div>
       <div class="tile" style="height:fit-content">
         <div class="box">
-          <h1 class="title" id="db_size">The database is: {0}</h1>
+          <h1 class="title" id="connected_machines">{0}/{1} machines online</h1>
         </div>
       </div>
     </div>
