--- a/src/frontend/templates/machines.html
+++ b/src/frontend/templates/machines.html
@@ -25,7 +25,7 @@
           <button class="delete" aria-label="close" onclick="close_machine_modal()"></button>
         </header>
         <section class="modal-card-body" id="modal_machine_body">
-          <button class="button is-fullwidth" id="modal_machine_detailed_stats_button">Detailed Stats</button>
+          <button class="button is-fullwidth" id="modal_machine_detailed_stats_button">Basic Stats</button>
           <div class="box" id="modal_machine_detailed_stats_box" style="display:none;">
             <div class="level">
               <div class="is-flex is-flex-direction-column is-align-items-center is-justify-content-center level-item">
@@ -122,7 +122,14 @@
 
           </div>
         </section>
-        <footer class="modal-card-foot pt-0" style="padding-bottom: var(--bulma-modal-card-head-radius)"></footer>
+        <footer class="modal-card-foot pt-0 is-flex is-justify-content-space-between">
+          <div class="level mt-2 mb-0">
+            <button class="button" onclick="window.location='config'+window.location.search"><iconify-icon icon="material-symbols:edit"></iconify-icon></button>
+            <div class="tags" id="warning_tags">
+
+            </div>
+          </div>
+        </footer>
       </div>
       <button class="modal-close is-large" aria-label="close" onclick="close_machine_modal()"></button>
     </div>
