--- a/src/frontend/templates/machines.html
+++ b/src/frontend/templates/machines.html
@@ -125,6 +125,7 @@
         <footer class="modal-card-foot pt-0 is-flex is-justify-content-space-between">
           <div class="level mt-2 mb-0">
             <button class="button" onclick="window.location='config'+window.location.search"><iconify-icon icon="material-symbols:edit"></iconify-icon></button>
+            <button class="button" onclick="clear_warning();">Clear Warnings</button>
             <div class="tags" id="warning_tags">
 
             </div>
